Fix issue with big images on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -136,6 +136,7 @@ ul {
     box-shadow: 1px 1px 5px;
     border-radius: 3px;
     text-align: center;
+    max-width: 100%;
 }
 
 .content iframe {
